--- a/Entretenimiento/Entretenimiento/Content/css/menu.css
+++ b/Entretenimiento/Entretenimiento/Content/css/menu.css
@@ -1,4 +1,6 @@
-﻿ul {
+﻿
+
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -68,5 +70,6 @@ li {
 
 .ui-page-theme-f {
     background: whitesmoke;
+    
 }
 
