--- a/Entretenimiento/Entretenimiento/Views/Home/CrearCuenta.cshtml
+++ b/Entretenimiento/Entretenimiento/Views/Home/CrearCuenta.cshtml
@@ -33,7 +33,8 @@
                 <input data-theme="a" type="password" name="pass" id="pass" placeholder="Contraseña" autocomplete="off" required />
                 <input data-theme="a" type="password" name="pass_1" id="pass_1" placeholder="Repita la contraseña" autocomplete="off" required />
                 <br />
-                <input class="ui-btn ui-corner-all" data-theme="b" type="submit" value="Registrar" name="registrar" />
+                <input data-transition="slide" class="ui-btn ui-corner-all" data-theme="b" type="submit" value="Crear" name="registrar" />
+                <a href="/Home/Perfil" data-transition="slide">Crear temporal</a>
             </form>         
         </div>        
     </div>
