--- a/Entretenimiento/Entretenimiento/Views/Home/InicioSesion.cshtml
+++ b/Entretenimiento/Entretenimiento/Views/Home/InicioSesion.cshtml
@@ -19,7 +19,7 @@
     <div data-role="page" data-theme="f">
         <div data-role="header" data-theme="f">     
             <h1>CamoStore</h1>
-            <a href="/Home/Index" data-rel="back" class="dropbtn ui-btn-left ui-btn-inline"><img src="~/Content/img/anterior.png" width="30" height="30" /></a>
+            <a href="/Home/Index" data-transition="pop" class="dropbtn ui-btn-left ui-btn-inline"><img src="~/Content/img/anterior.png" width="30" height="30" /></a>
         </div>
         <div data-role="content" style="text-align:center;">
             <img src="~/Content/img/usuarios.png" width="100" height="100"/>
@@ -35,7 +35,7 @@
             <p><a class="ui-btn" data-theme="a" href="/Home/CrearCuenta">Cear cuenta</a></p>
         </div>
         <div data-role="footer" data-position="fixed" style="text-align:center;">
-            <p><a href="begin-password-reset.html">¿Olvidaste la contraseña?</a></p>
+            <a class="ui-bar-e" href="/Home/OlvidaContrasena">¿Olvidaste la contraseña?</a>
         </div>
     </div>
 </body>
